--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,6 @@ src/state/useCameraStore.ts.txt
 src/state/useMapStore.ts.txt
 src/state/useUiStore.ts.txt
 src/types/map.types.ts.txt
+src/core/webgl/map-shaders.ts.txt
+src/core/webgl/webgl-utils.ts.txt
+src/core/WebGLRenderer.ts.txt
