Add player management panel and advanced zoom controls
Introduces a Player Management panel with player creation and listing, including new Player types and state management. Refactors camera controls to support zoom-to-cursor and pinch-to-center zoom, replacing setScale/panTo with a unified zoomTo action. Updates UI logic for panel toggling and toolbar highlighting to support the new player panel.

--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,4 @@ src/types/map.types.ts.txt
 src/core/webgl/map-shaders.ts.txt
 src/core/webgl/webgl-utils.ts.txt
 src/core/WebGLRenderer.ts.txt
+src/backlog.md
