Implement player placement with validity checks
Adds player placement mode with visual feedback and validity checks to prevent overlap with buildings or other players. Updates WebGLRenderer to render players and placement ghosts, refactors PlayerPanel to initiate placement, and extends state stores and input handlers to support the new workflow. Also updates types and config for player dimensions and color handling.

--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,6 @@ src/core/webgl/map-shaders.ts.txt
 src/core/webgl/webgl-utils.ts.txt
 src/core/WebGLRenderer.ts.txt
 src/backlog.md
+backlog.md
+src/config/appConfig.ts.txt
+src/hooks/useInputControls.ts.txt
