--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,4 @@ backlog.md
 src/config/appConfig.ts.txt
 src/hooks/useInputControls.ts.txt
 src/core/coordinate-utils.ts.txt
+src/core/CanvasRenderer.ts.txt
