--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@storybook/addon-onboarding": "^9.0.16",
     "@storybook/addon-vitest": "^9.0.16",
     "@storybook/react-vite": "^9.0.16",
+    "@types/node": "^24.0.13",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "@vitejs/plugin-react": "^4.5.2",
