--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,17 @@
+#-------------------------------------------------------------------------------
+# Dependency directories & Build output
+#-------------------------------------------------------------------------------
+node_modules/
+dist/
+dist-ssr/
+build/
+out/
+public/build/
+
+#-------------------------------------------------------------------------------
 # Logs
-logs
+#-------------------------------------------------------------------------------
+logs/
 *.log
 npm-debug.log*
 yarn-debug.log*
@@ -7,34 +19,35 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
-node_modules
-dist
-dist-ssr
+#-------------------------------------------------------------------------------
+# Development Tooling & Caches
+#-------------------------------------------------------------------------------
+.tmp/
+.vite/
+.vite-temp/
+.eslintcache
+coverage/
 *.local
 
+#-------------------------------------------------------------------------------
+# OS-generated files
+#-------------------------------------------------------------------------------
+.DS_Store
+Thumbs.db
+*.swp
+*~
+
+#-------------------------------------------------------------------------------
 # Editor directories and files
+#-------------------------------------------------------------------------------
 .vscode/*
 !.vscode/extensions.json
-.idea
-.DS_Store
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
+!.vscode/settings.json
+.idea/
 
-*storybook.log
-storybook-static
-src/state/useCameraStore.ts.txt
-src/state/useMapStore.ts.txt
-src/state/useUiStore.ts.txt
-src/types/map.types.ts.txt
-src/core/webgl/map-shaders.ts.txt
-src/core/webgl/webgl-utils.ts.txt
-src/core/WebGLRenderer.ts.txt
-src/backlog.md
+#-------------------------------------------------------------------------------
+# Application-specific ignores
+#-------------------------------------------------------------------------------
+# Keep these txt backups out of git since they are for our specific workflow
+*.ts.txt
 backlog.md
-src/config/appConfig.ts.txt
-src/hooks/useInputControls.ts.txt
-src/core/coordinate-utils.ts.txt
-src/core/CanvasRenderer.ts.txt
