--- a/package.json
+++ b/package.json
@@ -7,9 +7,7 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview",
-    "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "preview": "vite preview"
   },
   "dependencies": {
     "react": "^19.1.0",
@@ -17,13 +15,7 @@
     "zustand": "^5.0.6"
   },
   "devDependencies": {
-    "@chromatic-com/storybook": "^4.0.1",
     "@eslint/js": "^9.29.0",
-    "@storybook/addon-a11y": "^9.0.16",
-    "@storybook/addon-docs": "^9.0.16",
-    "@storybook/addon-onboarding": "^9.0.16",
-    "@storybook/addon-vitest": "^9.0.16",
-    "@storybook/react-vite": "^9.0.16",
     "@types/node": "^24.0.13",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
@@ -31,10 +23,8 @@
     "eslint": "^9.29.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
-    "eslint-plugin-storybook": "^9.0.16",
     "globals": "^16.2.0",
     "prettier": "^3.6.2",
-    "storybook": "^9.0.16",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.34.1",
     "vite": "^7.0.0",
