Add asset store and trigger asset loading on startup
Introduces useAssetStore for managing assets and updates App.tsx to load assets on application startup. Also updates baseMap.json to use a more compact format and adds Prettier configuration overrides for baseMap.json formatting.

--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -7,5 +7,13 @@
   "tabWidth": 2,
   "useTabs": false,
   "bracketSpacing": true,
-  "jsxSingleQuote": false
+  "jsxSingleQuote": false,
+  "overrides": [
+    {
+      "files": ["baseMap.json"],
+      "options": {
+        "printWidth": 99999999
+      }
+    }
+  ]
 }
