feat: Implement foundational infrastructure types and state management
- Updated Bookmark interface to clarify id type as stringified UUID.
- Introduced LayerManager for managing render layers with draw functions.
- Created Renderer interface for rendering frames and disposal.
- Added alliance-related derived selectors for efficient state retrieval.
- Established unified persistence for app state with versioning and migration.
- Developed useBookmarkStore for managing bookmarks with actions.
- Created useMetaStore for tracking app version and patch notes visibility.
- Implemented useOverwatchStore for managing overwatch settings and categories.

--- a/.gitignore
+++ b/.gitignore
@@ -51,3 +51,5 @@ Thumbs.db
 # Keep these txt backups out of git since they are for our specific workflow
 *.ts.txt
 backlog.md
+High-Level Rewrite Roadmap.md
+PHASED_ROADMAP_STATUS.md
